# oqtopus

./: .pre-commit-config.yaml  .qgis-plugin-ci  404.html  index.html  pyproject.toml  requirements-libs.txt  requirements.txt
.github/workflows/: README.md  integration-tests.yml  plugin-package.yml  plugin-test.yml  python-wheel-package.yml  reusable-datamodel-dumps.yml  reusable-datamodel-version-check.yml  reusable-plugin-package.yml  reusable-project-translation-package.yml
docs/: mkdocs.yml
docs/docs/: adding_modules.md  getting_started.md
docs/docs/development/: ci_cd_workflows.md
docs/docs/module_development/: datamodel.md
getting_started/: index.html
oqtopus/: __init__.py  oqtopus.py  oqtopus_plugin.py
oqtopus/core/: module_operation_task.py  module_package.py  package_prepare_task.py
oqtopus/gui/: check_roles_dialog.py  database_connection_widget.py  database_create_dialog.py  database_duplicate_dialog.py  install_dialog.py  logs_widget.py  main_dialog.py  module_selection_widget.py  module_widget.py  parameter_widget.py  parameters_groupbox.py  plugin_widget.py  project_widget.py  recreate_app_dialog.py  roles_dialog.py  roles_groupbox.py  roles_manage_dialog.py  settings_dialog.py  upgrade_dialog.py
oqtopus/ui/: database_connection_widget.ui  database_create_dialog.ui  logs_widget.ui  main_dialog.ui  module_selection_widget.ui  module_widget.ui  settings_dialog.ui
oqtopus/utils/: plugin_utils.py
scripts/: download-libs.sh  screenshots.py  setup_test_db.sh
tests/: __init__.py  conftest.py  test_module_widget.py  test_plugin_load.py
(+11 files in other folders)
