[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-git-versioning"
]
build-backend = "setuptools.build_meta"

[project]
name = "oqtopus"
description = "A QGIS module manager"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name="Damiano Lombardi", email="damiano@opengis.ch" }
]
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.0.1"

[tool.setuptools.package-data]
"oqtopus" = ["**/*.ui"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
